--- a/extented/src/main/resources/application.properties
+++ b/extented/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=extented
+server.port=8081
+server.servlet.context-path=/
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing?useUnicode=true&characterEncoding=utf8&connectionCollation=fr_FR.UTF-8
+spring.datasource.username=postgres
+spring.datasource.password=rabearison
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.sqlScriptEncoding=UTF-8
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.connection.characterEncoding=utf8
+spring.jpa.properties.hibernate.connection.CharSet=utf8
+spring.jpa.properties.hibernate.connection.useUnicode=true
+
+# Character Encoding Configuration
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# Spring MVC Configuration
+spring.mvc.charset=UTF-8
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
